--- a/w1/w1-s4-x1-turtle.ipynb
+++ b/w1/w1-s4-x1-turtle.ipynb
@@ -7,7 +7,7 @@
     "<style>div.title-slide {    width: 100%;    display: flex;    flex-direction: row;            /* default value; can be omitted */    flex-wrap: nowrap;              /* default value; can be omitted */    justify-content: space-between;}</style><div class=\"title-slide\">\n",
     "<span style=\"float:left;\">Licence CC BY-NC-ND</span>\n",
     "<span>Thierry Parmentelat &amp; Arnaud Legout</span>\n",
-    "<span><img src=\"media/both-logos-small-alpha.png\" style=\"display:inline\" /></span>\n",
+    "<span><img src=\"../media/both-logos-small-alpha.png\" style=\"display:inline\" /></span>\n",
     "</div>"
    ]
   },
@@ -157,9 +157,9 @@
     "Dans ce cas, commencez par chercher \"*module python turtle*\" dans votre moteur de recherche favori, pour localiser la documentation du module [`turtle`](https://docs.python.org/3/library/turtle.html).\n",
     "\n",
     "Vous trouverez quelques exemples pour commencer ici&nbsp;:\n",
-    " * [turtle_multi_squares.py](media/turtle_multi_squares.py) pour dessiner des carrés à l'emplacement de la souris en utilisant plusieurs tortues&nbsp;;\n",
-    " * [turtle_fractal.py](media/turtle_fractal.py) pour dessiner une fractale simple&nbsp;;\n",
-    " * [turtle_fractal_reglable.py](media/turtle_fractal_reglable.py) une variation sur la fractale, plus paramétrable.\n",
+    " * [turtle_multi_squares.py](../media/turtle_multi_squares.py) pour dessiner des carrés à l'emplacement de la souris en utilisant plusieurs tortues&nbsp;;\n",
+    " * [turtle_fractal.py](../media/turtle_fractal.py) pour dessiner une fractale simple&nbsp;;\n",
+    " * [turtle_fractal_reglable.py](../media/turtle_fractal_reglable.py) une variation sur la fractale, plus paramétrable.\n",
     " "
    ]
   }
@@ -186,7 +186,7 @@
    "auto_select": "code",
    "auto_select_fragment": true,
    "autolaunch": false,
-   "backimage": "media/nologo.png",
+   "backimage": "../media/nologo.png",
    "height": "100%",
    "slideNumber": "c",
    "start_slideshow_at": "selected",
